Refactor (Ll)GracefulCapabilityHandlerTest
Clean up utilities that we are using and stop using global state.

Change-Id: I6f8ff0095ba0b5e1bdace775f909c91764721b62
Signed-off-by: Robert Varga <robert.varga@pantheon.tech>